@@ -1,4 +1,3 @@
---illegal-access=warn
 --add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
 --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
 --add-opens=java.base/java.util=ALL-UNNAMED
